tests/fixtures/invalid/scalar_compound_literal_too_many_initializers.c
int main(void) {
    return (int){1, 2};
}
